worker1/worker1-rocky.yaml
apiVersion: v1
kind: Pod
metadata:
  name: worker1-rocky
spec:
  restartPolicy: Always
  containers:
  - name: rocky
    image: rockylinux/rockylinux
    imagePullPolicy: IfNotPresent
    command: ["/bin/sh", "-ec", "while :; do echo 'worker1-rocky'; sleep 3600 ; done"]
  nodeSelector:
    disktype: worker1
