worker1/worker1-ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: worker1-ubuntu
spec:
  restartPolicy: Always
  containers:
  - name: ubuntu
    image: ubuntu
    imagePullPolicy: IfNotPresent
    command: ["/bin/sh", "-ec", "while :; do echo 'worker1-ubuntu'; sleep 3600 ; done"]
  nodeSelector:
    disktype: worker1
