worker1/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
spec:
  podSelector: {} 
  ingress:
  - {}
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
